infra/kubernetes/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ai-artist
  namespace: ai-artist
spec:
  rules:
    - http:
        paths:
          - path: /v1
            pathType: Prefix
            backend:
              service:
                name: backend-api
                port:
                  name: http
          - path: /ai-artist-private
            pathType: Prefix
            backend:
              service:
                name: minio
                port:
                  name: api
          - path: /
            pathType: Prefix
            backend:
              service:
                name: website
                port:
                  name: http
